2006-11-04  Thomas M. Hinkle  <Thomas_Hinkle@alumni.brown.edu>

	* images/footprints.png: Used shoe-prints. Note that if we get a
	real artist to pretty up this icon, it needs to contain mostly
	solid black that will gets properly re-colored when we add
	trackers of different colors.
	* src/lib/gnome_sudoku.py: Tweak our fix to Bug 369531; Use
	STOCK_DIALOG_INFO instead of STOCK_INFO for hints.
	* src/lib/gtk_goodies/image_extras.py: Fix re-coloring of black png files.

2006-11-03  Thomas M. Hinkle  <Thomas_Hinkle@alumni.brown.edu>

	* src/lib/gnome_sudoku.py: Fix Bug 369531 [sudoku uses wrong icon for hints]
	* src/lib/*: Remove extra files that don't belong in CVS.
	* src/lib/gsudoku.py: Don't cause a traceback if user clicks "hint" before a square is selected.

2006-10-30  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* setup.py: Remove setup.py, which has been replaced by makefiles.

2006-10-28  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/gnome_sudoku.py:
	* src/lib/game_selector.py:
	* images/footprints.png:
	* images/winner.png:
	* images/Makefile.am:
	* glade/high_scores.glade: Clean up image usage, for instance
	we can't use and modify the GNOME logo, because it's a trademark.

2006-10-27  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/gsudoku_copy.py: 
	* src/lib/sudoku.py: Remove dependency upon Python Numeric.
	* src/lib/gnome_sudoku.py: Reorder help menu items.
	* src/gnome-sudoku: Bug #364646 – Don't hardcode reference
	  to /usr/bin/python binary

2006-10-20  Thomas M. Hinkle  <thomas_hinkle@sf.net>

	* src/lib/defaults.py: Get translations from gnome-games domain.

2006-10-20  Thomas M. Hinkle  <thomas_hinkle@sf.net>

	* Fixed typo that made always-show-hints persist even after it was
	  unchecked.
		  

2006-10-18  Thomas M. Hinkle  <thomas_hinkle@sf.net>

	* Fixed bug that caused GNOME Sudoku to hang when on "New Game"
     	  screen (related to recursive mainloop)
	* Fixed bug related to Undo that caused some moves not to register